# nannou_project_training

./: Cargo.toml
.cargo/: config.toml
src/: basic.rs  draw_axes.rs  draw_ellipse.rs  sin_wave.rs
