[package]
name = "nannou_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "draw"
path = "src/draw.rs"

[[bin]]
name = "draw_arrow"
path = "src/draw_arrow.rs"

[dependencies]
nannou = "0.18.1"
