[package]
name = "nannou_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "draw"
path = "src/draw.rs"

[[bin]]
name = "draw_arrow"
path = "src/draw_arrow.rs"

[[bin]]
name = "sin_wave"
path = "src/sin_wave.rs"

[[bin]]
name = "draw_ellipse"
path = "src/draw_ellipse.rs"

[[bin]]
name = "draw_axes"
path = "src/draw_axes.rs"

[dependencies]
nannou = "0.18.1"
